--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
 script:
-  - xctool -project Facade.xcodeproj -sdk iphonesimulator -scheme Facadee build
+  - xctool -project Facade.xcodeproj -sdk iphonesimulator -scheme Facade build
